--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.10",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
   "browserslist": [
